2007-09-11  Pavel Tsekov  <ptsekov@gmx.net>

	* choosesyntax.c (pstrcmp): Make static.

2007-08-27  Oswald Buddenhagen  <ossi@kde.org>

	* editdraw.c (print_to_widget): Make tabs and trailing whitespace
	characters visible.
	(edit_draw_this_line): Likewise.

2007-05-02  Pavel Tsekov <ptsekov@gmx.net>

	* editcmd.c (edit_find_string): Fix an off-by-one error when matching
	against a RE.

2007-04-27  Pavel Tsekov <ptsekov@gmx.net>

	* editcmd.c (edit_replace_cmd): Disable scanf-printf replacement
	if "Regular expression" is selected. Fix for savannah bug #19333.

2007-02-02  Pavel Roskin  <proski@gnu.org>

	* edit.h: Make skip_detach_prompt unsigned.  Otherwise, it
	cannot get value of 1.

2007-01-04  Pavel Tsekov  <ptsekov@gmx.net>

	* edit.c (edit_execute_cmd): Update the bracket pair highlighter
	state after processing CK_Find, CK_Find_Again, CK_Replace,
	CK_Replace_Again, CK_Complete_Word.

2006-12-10  Pavel Tsekov  <ptsekov@gmx.net>

	* edit.h (edit_move_to_prev_col): Declare the function to have
	external linkage.
	(edit_find_bracket): Likewise.
	* edit.c (edit_move_to_prev_col): Reflect the changes above.
	(edit_find_bracket): Likewise.
	* editwidget.c (edit_event): When moving around with the mouse
	use edit_move_down(), edit_move_up() and edit_move_to_prev_col()
	instead of move_cursor() to update the cursor position since
	the latter doesn't update some internal variables.
	Use edit_find_bracket() to update the bracket pair highlighter
	state.

2006-12-04  Leonard den Ottolander  <leonard den ottolander nl>

	* editdraw.c (edit_draw_this_line): Remove unused variable book_mark.

2006-11-17  Roland Illig  <roland.illig@gmx.de>

	* edit_cmd.c (edit_save_file): The file's modification time is
	recorded and compared to the one of the file on disk. If it
	differs, the user is asked whether the file should really be
	overwritten.
	* edit.c (edit_init): Likewise.

2006-08-02  Leonard den Ottolander  <leonard den ottolander nl>
