@@ -1227,10 +1227,8 @@ save_setup_cmd (void)
     
     save_setup ();
     sync_profiles ();
-    str = g_strconcat ( _(" Setup saved to ~/"), PROFILE_NAME, (char *) NULL);
     
-    message (0, _(" Setup "), str);
-    g_free (str);
+    message (0, _(" Setup "), _(" Setup saved to ~/%s"), PROFILE_NAME);
 }
 
 static void
