@@ -1471,13 +1471,9 @@ load_hotlist (void)
 	if (result) {
 	    remove_old_list = 1;
 	} else {
-	    char *msg;
-
-	    msg = g_strconcat (_("MC was unable to write ~/"), HOTLIST_FILENAME,
-				_(" file, your old hotlist entries were not deleted"), (char *) NULL);
-
-	    message (D_ERROR, _(" Hotlist Load "), msg);
-	    g_free (msg);
+	    message (D_ERROR, _(" Hotlist Load "),
+		     _("MC was unable to write ~/%s file, your old hotlist entries were not deleted"),
+		     HOTLIST_FILENAME);
 	}
     } else {
 	hot_load_file (hotlist);
